--- a/Animais fantasticos/index.html
+++ b/Animais fantasticos/index.html
@@ -19,7 +19,7 @@
 
   <section class="grid-section animais" id="animais">
     <h1 class="titulo" > Animais Fantásticos</h1>
-    <ul>
+    <ul class="animais-lista">
       <li>
         <img src="img/imagem1.jpg" </li>
       <li>
@@ -81,8 +81,8 @@
     </div>
   </section>
   <section class="grid-section faq" id="faq">
-    <h1>FAQ</h1>
-    <dl>
+    <h1 class="titulo">FAQ</h1>
+    <dl class="faq-lista">
       <dt>Qual a idade dos animais?</dt>
       <dd>
         As raposas são animais mamíferos e onívoros pertencentes à família Canidae. São vulpídeos de porte médio, caracterizados por um focinho comprido e uma cauda longa e peluda.
@@ -103,7 +103,7 @@
   </section>
 
   <section class="grid-section" id="contato">
-    <h1>Contato</h1>
+    <h1 class="titulo">Contato</h1>
     <div class="mapa">
       <img src="img/mapa.png">
     </div>
@@ -118,6 +118,6 @@
     <p>Todos os direitos reservados.</p>
   </footer>
 
-  <script> </script>
+  <script src="script.js"></script> 
 </body>
 </html>
