--- a/JS Assincrono/fetch/index.html
+++ b/JS Assincrono/fetch/index.html
@@ -4,15 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Array</title>
+  <title>fetch</title>
 </head>
 <body>
-  
-  <ul>
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-  </ul>
+  <div class="conteudo" ></div>
   <script src="script.js"></script> 
 </body>
 </html>
